# duda

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.in  README  README.md
conf/: CMakeLists.txt  duda.conf  duda.conf.in
docs/: generator  index.doc
docs/html/: .html
example/: FIXME  README  hello.c  hello.duda
htdocs/: README
htdocs/css/: duda.css
include/: duda.h
include/duda/: duda.h  duda_api.h  duda_body_buffer.h  duda_bootstrap.h  duda_conf.h  duda_event.h  duda_fconf.h  duda_info.h.in  duda_lib.h  duda_log.h  duda_objects.h  duda_old.h  duda_package.h  duda_qs_map.h  duda_queue.h  duda_router.h  duda_sendfile.h  duda_service_internal.h  duda_session.h  duda_stats_proc.h  duda_utils.h  duda_version.h.in  duda_webservice.h  duda_xtime.h
include/duda/objects/: duda_console.h  duda_cookie.h  duda_dthread_channel.h  duda_gc.h  duda_global.h  duda_log.h  duda_mem.h  duda_param.h  duda_qs.h  duda_request.h  duda_router.h  duda_worker.h
lib/: CMakeLists.txt  duda.c  duda_api.c  duda_body_buffer.c  duda_conf.c  duda_console.c  duda_cookie.c  duda_data.c  duda_debug.c  duda_dthread.c  duda_dthread_channel.c  duda_event.c  duda_fconf.c  duda_gc.c  duda_global.c  duda_log.c  duda_mem.c  duda_old_launcher.c  duda_package.c  duda_param.c  duda_qs.c  duda_queue.c  duda_request.c  duda_response.c  duda_router.c  duda_sendfile.c  duda_service.c  duda_session.c  duda_stats.c  duda_utils.c  duda_worker.c  duda_xtime.c
lib/objects/: duda_console.c  duda_cookie.c  duda_data.c  duda_dthread.c  duda_dthread_channel.c  duda_gc.c  duda_global.c  duda_log.c  duda_mem.c  duda_param.c  duda_qs.c  duda_request.c  duda_response.c  duda_router.c  duda_session.c  duda_worker.c  duda_xtime.c
src/: CMakeLists.txt  Makefile  Makefile.in  duda.c  duda.h  duda_api.c  duda_api.h  duda_body_buffer.c  duda_body_buffer.h  duda_conf.c  duda_conf.h  duda_console.c  duda_console.h  duda_cookie.c  duda_cookie.h  duda_data.c  duda_data.h  duda_debug.c  duda_debug.h  duda_dthread.c  duda_dthread.h  duda_dthread_channel.c  duda_dthread_channel.h  duda_event.c  duda_event.h  duda_fconf.c  duda_fconf.h  duda_gc.c  duda_gc.h  duda_gc_map.h  duda_global.c  duda_global.h  duda_log.c  duda_log.h  duda_map.c  duda_map.h  duda_mem.c  duda_mem.h  duda_objects.h  duda_old_launcher.c  (+31 more)
